chore: more unit tests